--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id("dagger.hilt.android.plugin")
 }
 
 android {
@@ -86,12 +87,13 @@ dependencies {
     implementation "io.coil-kt:coil:1.1.1"
     implementation "com.google.accompanist:accompanist-coil:0.7.0"
 
+
     //Dagger - Hilt
-//    implementation "com.google.dagger:hilt-android:2.33-beta"
-//    kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-//    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
-//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha01'
+    implementation "com.google.dagger:hilt-android:2.33-beta"
+    kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha01'
 
     implementation 'com.android.support:palette-v7:28.0.0'
 }
